# ticket_dashboard

./: .cursorignore  .env.example  .gitignore  .pre-commit-config.yaml  PRD.md  README.md  pyproject.toml
.cursor/: activity_log.md  architecture.md  changelog.md  instructions.md  roadmap.md
.cursor/rules/: agent.mdc  security.mdc  standards.mdc  workflow.mdc
src/: __init__.py  app.py  config.py  main.py
src/ai/: __init__.py  analyzer.py
src/components/: __init__.py  age_chart.py  ai_patterns.py  category_chart.py  flagged_table.py  heatmap.py  kpi_strip.py  pattern_alerts.py  state_chart.py
src/data/: __init__.py  loader.py  models.py  transforms.py
tests/: __init__.py  test_ai_analyzer.py  test_loader.py  test_models.py  test_transforms.py
tests/components/: test_age_chart.py  test_ai_patterns.py  test_category_chart.py  test_flagged_table.py  test_heatmap.py  test_kpi_strip.py  test_pattern_alerts.py  test_state_chart.py
