[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "ticket-dashboard"
version = "0.1.0"
description = "Ticket dashboard application — view and manage tickets locally with optional cloud later."
requires-python = ">=3.11"
dependencies = [
  # Dashboard
  "dash==2.17.1",
  "plotly==5.22.0",
  "pandas==2.2.2",
  "dash-bootstrap-components==1.6.0",
  # AI / LLM
  "anthropic==0.85.0",
  "openai==1.35.0",
  "pydantic==2.7.4",
  "pydantic-settings==2.5.2",
  # MCP
  "mcp==1.9.4",
  # HTTP / async
  "httpx==0.27.0",
  "anyio==4.9.0",
  # Logging
  "structlog==24.2.0",
  # Hardware (Raspberry Pi — conditionally installed)
  # "RPi.GPIO==0.7.1",  # Uncomment on Pi hardware
  # "adafruit-blinka==8.40.0",  # Uncomment on Pi hardware
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.2",
  "pytest-cov==5.0.0",
  "pytest-asyncio==0.23.7",
  "mypy==1.10.0",
  "ruff==0.5.0",
  "black==24.4.2",
  "pre-commit==3.7.1",
  "bandit==1.7.9",
  "pip-audit==2.7.3",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "W", "I", "N", "S", "B", "A", "C4", "T20"]
ignore = ["S101"]  # allow assert in tests

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*"]

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101"]  # assert_used in tests if needed
